# GPU_MeshClusterizer

./: .gitignore  .gitmodules  CMakeLists.txt  GPU_MeshClusterizer.sln  LICENSE  README.md
GPU_MeshClusterizer/: GPU_MeshClusterizer.vcxproj  GPU_MeshClusterizer.vcxproj.filters  main.cu
GPU_MeshClusterizer/lbvh/: bvh.cuh
Includes/: CMakeLists.txt  Includes.vcxproj  Includes.vcxproj.filters  gmcDefines.h  gmcMacros.h  gmcStructs.h
Includes/gmcCuda/: gmcCuda.h
MeshClusterizerDemo/: CMakeLists.txt  CesiumMan.gltf  MeshClusterizerDemo.vcxproj  MeshClusterizerDemo.vcxproj.filters  gltfLoader.cpp  gltfLoader.h  main.cpp  main.cu
gmcCuda/: CMakeLists.txt  gmcCuda.cpp  gmcCuda.filters  gmcCuda.vcxproj  gmcCuda.vcxproj.filters  temp.cpp
gmcCuda/includes/: clusterbuilder.cuh  cudaHelper.cuh  gmcCudaIncludes.cuh  lbvh.cuh  vec_math.h
gmcCuda/includes/nvUtils/: nvUtils.h
gmcCuda/src/: clusterBuilder.cu  gmcCuda.cu  lbvh.cu
